# MyDownload

./: .gitignore  CMakeLists.txt  README.md
include/curl/: curl.h  curlver.h  easy.h  multi.h  system.h  typecheck-gcc.h  urlapi.h
src/: main.c
src/example/: 10-at-a-time.c  Makefile  anyauthput.c  asiohiper.cpp  cacertinmem.c  certinfo.c  chkspeed.c  cookie_interface.c  crawler.c  curlgtk.c  curlx.c  debug.c  ephiperfifo.c  evhiperfifo.c  externalsocket.c  fileupload.c  fopen.c  ftp-wildcard.c  ftpget.c  ftpgetinfo.c  ftpgetresp.c  ftpsget.c  ftpupload.c  ftpuploadfrommem.c  ftpuploadresume.c  getinfo.c  getinmemory.c  getredirect.c  ghiper.c  hiperfifo.c  href_extractor.c  htmltidy.c  htmltitle.cpp  http-post.c  http2-download.c  http2-pushinmemory.c  http2-serverpush.c  http2-upload.c  httpcustomheader.c  httpput.c  (+69 more)
src/util/: download.c  time_util.c  time_util.h
