cmake_minimum_required(VERSION 3.14)
project(MyDownload C)

set(CMAKE_C_STANDARD 99)

#include_directories(include)

#link_directories(lib)

add_executable(MyDownload
        src/main.c
        #src/example/10-at-a-time.c
        #src/example/adddocsref.pl
        #src/example/anyauthput.c
        #src/example/asiohiper.cpp
        #src/example/cacertinmem.c
        #src/example/certinfo.c
        #src/example/chkspeed.c
        #src/example/cookie_interface.c
        #src/example/crawler.c
        #src/example/curlgtk.c
        #src/example/curlx.c
        #src/example/debug.c
        #src/example/ephiperfifo.c
        #src/example/evhiperfifo.c
        #src/example/externalsocket.c
        #src/example/fileupload.c
        #src/example/fopen.c
        #src/example/ftpget.c
        #src/example/ftpgetinfo.c
        #src/example/ftpgetresp.c
        #src/example/ftpsget.c
        #src/example/ftpupload.c
        #src/example/ftpuploadfrommem.c
        #src/example/ftpuploadresume.c
        #src/example/ftp-wildcard.c
        #src/example/getinfo.c
        #src/example/getinmemory.c
        #src/example/getredirect.c
        #src/example/ghiper.c
        #src/example/hiperfifo.c
        #src/example/href_extractor.c
        #src/example/htmltidy.c
        #src/example/htmltitle.cpp
        #src/example/http2-download.c
        #src/example/http2-pushinmemory.c
        #src/example/http2-serverpush.c
        #src/example/http2-upload.c
        #src/example/httpcustomheader.c
        #src/example/http-post.c
        #src/example/httpput.c
        #src/example/https.c
        #src/example/imap-append.c
        #src/example/imap-copy.c
        #src/example/imap-create.c
        #src/example/imap-delete.c
        #src/example/imap-examine.c
        #src/example/imap-fetch.c
        #src/example/imap-list.c
        #src/example/imap-lsub.c
        #src/example/imap-multi.c
        #src/example/imap-noop.c
        #src/example/imap-search.c
        #src/example/imap-ssl.c
        #src/example/imap-store.c
        #src/example/imap-tls.c
        #src/example/Makefile
        #src/example/Makefile.am
        #src/example/makefile.dj
        #src/example/Makefile.example
        #src/example/Makefile.in
        #src/example/Makefile.inc
        #src/example/Makefile.m32
        #src/example/Makefile.netware
        #src/example/multi-app.c
        #src/example/multi-debugcallback.c
        #src/example/multi-double.c
        #src/example/multi-formadd.c
        #src/example/multi-post.c
        #src/example/multi-single.c
        #src/example/multithread.c
        #src/example/multi-uv.c
        #src/example/opensslthreadlock.c
        #src/example/parseurl.c
        #src/example/persistent.c
        #src/example/pop3-dele.c
        #src/example/pop3-list.c
        #src/example/pop3-multi.c
        #src/example/pop3-noop.c
        #src/example/pop3-retr.c
        #src/example/pop3-ssl.c
        #src/example/pop3-stat.c
        #src/example/pop3-tls.c
        #src/example/pop3-top.c
        #src/example/pop3-uidl.c
        #src/example/post-callback.c
        #src/example/postinmemory.c
        #src/example/postit2.c
        #src/example/postit2-formadd.c
        #src/example/progressfunc.c
        #src/example/README
        #src/example/resolve.c
        #src/example/rtsp.c
        #src/example/sampleconv.c
        #src/example/sendrecv.c
        #src/example/sepheaders.c
        #src/example/sessioninfo.c
        #src/example/sftpget.c
        #src/example/sftpuploadresume.c
        #src/example/shared-connection-cache.c
        #src/example/simple.c
        #src/example/simplepost.c
        #src/example/simplessl.c
        #src/example/smooth-gtk-thread.c
        #src/example/smtp-expn.c
        #src/example/smtp-mail.c
        #src/example/smtp-mime.c
        #src/example/smtp-multi.c
        #src/example/smtp-ssl.c
        #src/example/smtp-tls.c
        #src/example/smtp-vrfy.c
        #src/example/sslbackend.c
        #src/example/synctime.c
        #src/example/threaded-shared-conn.c
        #src/example/threaded-ssl.c
        #src/example/url2file.c
        #src/example/urlapi.c
        #src/example/usercertinmem.c
        #src/example/version-check.pl
        #src/example/xmlstream.c
        )

target_link_libraries(MyDownload
        #util/download.c
        libcurl.so
        )